# audiblez

./: AGENTS.md  README.md  pyproject.toml
audiblez/: cli.py  core.py  pdf.py  tts_backends.py  tui.py  ui.py  web.py
test/: test_cli.py  test_main.py  test_tts_backends.py
