[project]
name = "audiblez"
version = "0.4.10"
description = "Generate audiobooks from e-books (epub to wav/m4b)"
authors = [
    { name = "Claudio Santini", email = "hireclaudio@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ebooklib (>=0.18,<0.19)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pick (>=2.4.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "spacy (>=3.8.3,<4.0.0)",
    "kokoro (>=0.7.9,<0.8.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pymupdf (>=1.24,<2.0)",
    "wxPython>=4.2.1",
    "Pillow>=10.0.0",
    "urwid>=2.1.2",
]

[project.optional-dependencies]
mlx = ["mlx-audio>=0.2.0; python_version >= '3.10'"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://claudio.uk/posts/epub-to-audiobook.html"
Documentation = "https://github.com/santinic/audiblez"
Repository = "https://github.com/santinic/audiblez"
Issues = "https://github.com/santinic/audiblez/issues"

[project.scripts]
audiblez = "audiblez.cli:cli_main"
audiblez-ui = "audiblez.ui:main"
audiblez-tui = "audiblez.tui:main"

[tool.hatch.build.targets.wheel]
packages = ["audiblez"]

[tool.hatch.build.targets.sdist]
include = [
  "audiblez",
  "README.md",
  "LICENSE",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
]
